update links to new domain

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
   <meta property="og:description"
     content="Senior Backend Engineer at Cloudera specializing in Java, Go, and Kubernetes. Expert in cloud infrastructure and distributed systems." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://kaustav-sarkar.com/" />
-  <meta property="og:image" content="https://kaustav-sarkar.com/images/kaustav.jpeg" />
+  <meta property="og:url" content="https://kaustavsarkar.dev/" />
+  <meta property="og:image" content="https://kaustavsarkar.dev/images/kaustav.jpeg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="Kaustav Sarkar Portfolio" />
@@ -29,10 +29,10 @@
   <meta name="twitter:title" content="Kaustav Sarkar - Senior Backend Engineer" />
   <meta name="twitter:description"
     content="Senior Backend Engineer at Cloudera specializing in Java, Go, and Kubernetes." />
-  <meta name="twitter:image" content="https://kaustav-sarkar.com/images/kaustav.jpeg" />
+  <meta name="twitter:image" content="https://kaustavsarkar.dev/images/kaustav.jpeg" />
 
   <!-- CANONICAL URL -->
-  <link rel="canonical" href="https://kaustav-sarkar.com/" />
+  <link rel="canonical" href="https://kaustavsarkar.dev/" />
 
   <!-- PREVENT WHITE FLASH - Dark background matching splash screen -->
   <style>
